2014-05-30  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>

	* mime-view.el (mime-display-multipart/alternative): Pick and
	display the latter part when there are multiple parts which have
	the highest score.
	Cf. https://github.com/wanderlust/wanderlust/issues/60

2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-text/plain): Check parameter's value
	case insensitively.

2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-preview-fill-flowed-text)
	(mime-preview-fill-flowed-text-delsp): Abolished.  Internal
	decoder is always available.
	(mime-display-text/plain-flowed-fill-column): New variable.
	(mime-display-text/plain-flowed-parse-line)
	(mime-display-text/plain-flowed): New functions.
	(mime-display-text/plain): Use them.

2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* SEMI-MK (compile-semi): Set mime-situation-examples-file to nil.

	* mime-view.el: Do not modify mime-situation-examples-file's value.

2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-define-keymap): Use mapc instead of
	mapcar for side effect.

2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Set up for previewing
	application/x-pkcs7-signature part.

2014-02-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-normalize-eol-crlf): New CCL program.
	(mime-edit-sign-pgp-mime): Use it to improve speed.

	* mime-pgp.el (mime-pgp-decrypt-string)
	(mime-verify-application/*-signature-internal): Refactored.

2014-02-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-entity): Add comment.

2014-02-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Remove preview setting for multipart/signed part.
	Use mime-pgp-verify-when-preview and mime-pgp-decrypt-when-preview
	to define visibility conditions.

	* mime-view.el (mime-display-entity): insert LF when inserted
	content does not end with LF.

	* mime-pgp.el (mime-display-multipart/signed): Removed.